refactor: extract artifact pipeline execution into dedicated executor
- Introduced ArtifactPipelineExecutor to centralize artifact execution logic
- Simplified profile-specific ProjectArtifactsPort adapters
- Separated artifact ordering from execution strategy
- Improved extensibility for future execution policies (parallel, fail-fast, metrics)